<resources>
    <string name="app_name">maymay</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="email_address">Email adderess</string>
    <string name="LOGIN">login</string>
    <string name="createnewaccount">create new account</string>
    <string name="or">or</string>
    <string name="EMAIL">Email address</string>
    <string name="email_adddress">Email adddress</string>
    <string name="menu">menu</string>
    <string name="filter">filter</string>
    <string name="home">home</string>
    <string name="notification">notification</string>
    <string name="todo">TODO</string>
    <string name="pen">TODO</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="name">Name</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="name_reacted_to_your_post">name reacted to your post</string>
    <string name="textview">TextView</string>
</resources>

