<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.gagan.maymay.Home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvMeme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/toolbar_upper"
            android:layout_above="@id/toolbar_lower"
            />

        <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_upper"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#000000"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/amita"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/app_name"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#000000"
        android:contentDescription="@string/menu"
        app:srcCompat="@drawable/ic_menu_white_24dp" />

    <ImageButton
        android:id="@+id/filter"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="#000000"
        android:contentDescription="@string/filter"
        app:srcCompat="@drawable/ic_filter_list_white_24dp" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_lower"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ImageButton
        android:id="@+id/notificationbtn1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView2"
        android:background="@android:color/black"
        android:contentDescription="@string/notification"
        android:elevation="0dp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/ic_notifications_white_24dp" />

    <ImageButton
        android:id="@+id/homebtn1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:background="#000000"
        android:contentDescription="@string/home"
        app:srcCompat="@drawable/ic_home_white_24dp" />

    <ImageButton
        android:id="@+id/profilebtn1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="28dp"
        android:background="@android:color/black"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_account_circle_white_24dp" />

    <ImageButton
        android:id="@+id/createbtn1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="false"
        android:background="@android:color/black"
        android:contentDescription="@string/pen"
        android:cropToPadding="false"
        app:srcCompat="@drawable/ic_create_white_24dp" />

</RelativeLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        >
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>

