<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:theme="@style/Base.Widget.AppCompat.ActionBar.Solid"
    tools:context="com.example.gagan.maymay.Login_page">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#111111"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/amita"
        android:text="@string/app_name"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        style="@android:style/Widget.Material.Light.EditText"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_above="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:backgroundTint="#222222"
        android:breakStrategy="high_quality"
        android:ems="10"
        android:hint="@string/email_adddress"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="false"
        android:shadowColor="@android:color/background_light"
        android:singleLine="?android:attr/windowSwipeToDismiss"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/background_light"
        android:textColorHint="#222222"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="330dp"
        android:layout_height="50dp"

        android:layout_above="@+id/loginbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#222222"
        android:ems="10"
        android:freezesText="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_light"
        android:textColorHint="#222222"
        android:textColorLink="@android:color/holo_green_dark"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape"
        android:shadowColor="@android:color/background_light"
        android:text="@string/LOGIN"
        android:textColor="@android:color/darker_gray"
        android:textColorLink="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.451" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="15dp"
        android:layout_height="21dp"
        android:layout_above="@+id/signupbutton"
        android:layout_centerHorizontal="true"
        android:text="@string/or"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527" />

    <Button
        android:id="@+id/signupbutton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="156dp"
        android:background="@drawable/buttonshape"
        android:text="@string/createnewaccount"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textColorLink="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.606" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViews1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:visibility="gone" />

</RelativeLayout>
